--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <link rel="stylesheet" href="styles.css"></head>
 <body class="container-fluid">
   <cy-root>
-	<span class="k-icon k-i-loading" style="color: #ff6358"></span>
+	<!-- <span class="k-icon k-i-loading" style="color: #ff6358"></span> -->
   </cy-root>
 <script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
 </html>
